--- a/index.html
+++ b/index.html
@@ -5,14 +5,12 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Azénor – héroïne du roman Le Testament d’Azénor</title>
-
 <meta name="description"
       content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
 
 <link rel="canonical" href="https://azenor.org/">
 <link rel="icon" href="/favicon.ico">
 
-<!-- Open Graph -->
 <meta property="og:locale" content="fr_FR">
 <meta property="og:type" content="website">
 <meta property="og:title" content="Azénor – Le Testament d’Azénor">
@@ -21,7 +19,6 @@
 <meta property="og:url" content="https://azenor.org/">
 <meta property="og:site_name" content="Le Testament d’Azénor">
 
-<!-- Twitter -->
 <meta name="twitter:card" content="summary">
 <meta name="twitter:title" content="Azénor – Le Testament d’Azénor">
 <meta name="twitter:description"
@@ -36,6 +33,7 @@
   --border: rgba(255,255,255,.12);
 }
 *{ box-sizing:border-box; }
+
 body{
   margin:0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
@@ -44,8 +42,10 @@ body{
     linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.55)),
     url("images/accueil/fond-accueil.jpg") center / cover no-repeat fixed;
 }
+
 a{ color:inherit; text-decoration:none; }
 
+/* HEADER */
 header{
   position:sticky;
   top:0;
@@ -79,8 +79,8 @@ header{
   border:1px solid rgba(255,255,255,.15);
   background:rgba(0,0,0,.25);
 }
-.menu a:hover{ border-color:var(--accent); }
 
+/* LANG */
 .lang{
   display:flex;
   gap:8px;
@@ -96,15 +96,11 @@ header{
   background:rgba(0,0,0,.25);
 }
 
-/* ===== Mobile: menu horizontal scrollable (iPhone) ===== */
+/* MOBILE MENU — SCROLL HORIZONTAL (UNIQUEMENT ICI) */
 @media (max-width: 768px){
-  header .nav{
-    align-items: center;
-  }
   header .nav nav.menu{
     flex-wrap: nowrap !important;
     overflow-x: auto;
-    overflow-y: hidden;
     -webkit-overflow-scrolling: touch;
     white-space: nowrap;
     gap: 8px;
@@ -115,11 +111,13 @@ header{
   }
 }
 
+/* MAIN */
 main{
   max-width:1200px;
   margin:auto;
   padding:36px 18px 44px;
 }
+
 .hero{
   display:grid;
   grid-template-columns: 480px 1fr;
@@ -149,10 +147,11 @@ h1{
   color:var(--accent);
   font-size: clamp(1.6rem, 2.2vw, 2.1rem);
 }
+
 .intro{
   line-height:1.75;
   color:var(--muted);
-  font-size: 1.02rem;
+  font-size:1.02rem;
   white-space: pre-wrap;
 }
 
@@ -195,9 +194,6 @@ h1{
   border-radius:3px;
   box-shadow:0 2px 4px rgba(0,0,0,0.6);
 }
-      body{
-  padding-bottom: 140px;
-}
 </style>
 </head>
 
@@ -206,7 +202,6 @@ h1{
 <header>
   <div class="nav">
     <div class="title"></div>
-
     <nav class="menu">
       <a href="lieux-du-roman.html">Lieux</a>
       <a href="personnages.html">Personnages</a>
@@ -216,7 +211,6 @@ h1{
       <a href="making-off.html">making of</a>
       <a href="contact.html">Contact</a>
     </nav>
-
     <div class="lang">
       <a href="en/index.html" title="English version">🇬🇧</a>
     </div>
@@ -226,11 +220,9 @@ h1{
 <main>
 <section class="hero">
   <div>
-    <img class="cover"
-         src="images/accueil/couverture.jpg"
+    <img class="cover" src="images/accueil/couverture.jpg"
          alt="Couverture du roman Le Testament d’Azénor">
   </div>
-
   <div class="card">
     <h1>Azénor – héroïne du roman <em>Le Testament d’Azénor</em></h1>
     <div class="intro">
@@ -255,7 +247,6 @@ De Brest à l’île d’Ouessant, des îles d’Aran aux rivages sauvages de Br
         <svg viewBox="0 0 24 24"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
       </a>
     </div>
-
     <a class="buy-btn" href="achat.html">Acheter le livre</a>
   </div>
 </footer>
