--- a/index.html
+++ b/index.html
@@ -5,93 +5,121 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Azénor – héroïne du roman Le Testament d’Azénor</title>
-<meta name="description"
-      content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
-
+<meta name="description" content="Site officiel autour d’Azénor, héroïne du roman historique Le Testament d’Azénor d’Alain Bertrand.">
 <link rel="canonical" href="https://azenor.org/">
 <link rel="icon" href="/favicon.ico">
 
 <style>
+:root{
+  --accent:#f28c28;
+  --fg:#f2f2f2;
+  --muted:#cccccc;
+  --card: rgba(0,0,0,.52);
+  --border: rgba(255,255,255,.12);
+}
+*{ box-sizing:border-box; }
 body{
   margin:0;
   font-family: system-ui, -apple-system, BlinkMacSystemFont, "Segoe UI", Arial, sans-serif;
-  color:#f2f2f2;
+  color:var(--fg);
   background:
-    linear-gradient(rgba(0,0,0,.45), rgba(0,0,0,.65)),
+    linear-gradient(rgba(0,0,0,.35), rgba(0,0,0,.55)),
     url("images/accueil/fond-accueil.jpg") center / cover no-repeat fixed;
 }
+a{ color:inherit; text-decoration:none; }
 
 /* HEADER */
 header{
-  background:rgba(0,0,0,.7);
-  padding:12px 16px;
+  position:sticky; top:0; z-index:10;
+  background:rgba(0,0,0,.65);
+  backdrop-filter: blur(6px);
+  border-bottom:1px solid rgba(255,255,255,.1);
 }
-nav.menu{
-  display:flex;
-  gap:10px;
-  overflow-x:auto;
-  white-space:nowrap;
+.nav{
+  max-width:1200px; margin:auto; padding:14px 18px;
+  display:flex; align-items:center; gap:16px; flex-wrap:wrap;
 }
-nav.menu a{
-  color:#f28c28;
+.menu{
+  flex:1; display:flex; gap:10px; flex-wrap:wrap;
+}
+.menu a{
+  color:var(--accent);
   padding:6px 10px;
-  border:1px solid rgba(255,255,255,.2);
-  border-radius:20px;
-  text-decoration:none;
+  border-radius:999px;
+  border:1px solid rgba(255,255,255,.15);
+  background:rgba(0,0,0,.25);
+}
+.lang{ display:flex; gap:8px; }
+.lang a{
+  width:34px; height:24px;
+  display:flex; align-items:center; justify-content:center;
+  border-radius:6px; border:1px solid rgba(255,255,255,.25);
+  background:rgba(0,0,0,.25);
 }
 
-/* CONTENT */
+/* MENU MOBILE — SCROLL HORIZONTAL */
+@media (max-width:768px){
+  header .nav nav.menu{
+    flex-wrap:nowrap;
+    overflow-x:auto;
+    -webkit-overflow-scrolling:touch;
+    white-space:nowrap;
+    gap:8px;
+  }
+  header .nav nav.menu a{
+    flex:0 0 auto; white-space:nowrap;
+  }
+}
+
+/* MAIN */
 main{
-  max-width:1100px;
-  margin:40px auto;
-  padding:0 20px;
+  max-width:1200px; margin:auto; padding:36px 18px 44px;
 }
-
 .hero{
-  display:grid;
-  grid-template-columns:480px 1fr;
-  gap:32px;
+  display:grid; grid-template-columns:480px 1fr; gap:32px; align-items:start;
 }
-@media(max-width:900px){
-  .hero{ grid-template-columns:1fr; }
-}
+@media(max-width:980px){ .hero{ grid-template-columns:1fr; } }
 
 .cover{
-  width:100%;
-  max-width:480px;
-  box-shadow:0 20px 50px rgba(0,0,0,.7);
+  width:100%; max-width:480px; display:block; margin:auto;
+  box-shadow:0 16px 46px rgba(0,0,0,.60);
 }
-
-.text{
-  background:rgba(0,0,0,.6);
-  padding:20px;
+.card{
+  background:var(--card);
+  border:1px solid var(--border);
+  border-radius:14px;
+  padding:18px;
+  box-shadow:0 12px 30px rgba(0,0,0,.35);
 }
-
 h1{
-  color:#f28c28;
-  margin-top:0;
+  margin:0 0 12px; color:var(--accent);
+  font-size: clamp(1.6rem, 2.2vw, 2.1rem);
+}
+.intro{
+  line-height:1.75; color:var(--muted); font-size:1.02rem;
+  white-space: pre-wrap;
 }
 
-p{
-  line-height:1.7;
-  margin-bottom:1em;
+/* FOOTER — EN BAS DE PAGE (PAS FIXE) */
+.site-footer{
+  background:#000; margin-top:4rem; padding:1.6rem 0;
 }
-
-/* FOOTER */
-footer{
-  background:#000;
-  color:#f28c28;
-  padding:20px;
-  margin-top:60px;
-  display:flex;
-  justify-content:space-between;
-  align-items:center;
-  flex-wrap:wrap;
+.footer-inner{
+  max-width:1200px; margin:0 auto; padding:0 1.5rem;
+  display:flex; justify-content:space-between; align-items:center;
+  gap:16px; flex-wrap:wrap;
 }
-footer a{
-  color:#f28c28;
-  margin-right:12px;
-  text-decoration:none;
+.social-icons .icon{
+  display:inline-flex; align-items:center; justify-content:center;
+  width:32px; height:32px; border-radius:50%;
+  border:1px solid #f28c28; margin-right:0.5rem;
+}
+.social-icons svg{ width:16px; height:16px; fill:#f28c28; }
+.buy-btn{
+  background:linear-gradient(#3a3a3a, #1f1f1f);
+  color:#f28c28; padding:0.55rem 1.2rem;
+  text-decoration:none; font-weight:500; border-radius:3px;
+  box-shadow:0 2px 4px rgba(0,0,0,.6);
 }
 </style>
 </head>
@@ -99,44 +127,57 @@ footer a{
 <body>
 
 <header>
-  <nav class="menu">
-    <a href="lieux-du-roman.html">Lieux</a>
-    <a href="personnages.html">Personnages</a>
-    <a href="livre-des-conquetes.html">Conquêtes</a>
-    <a href="veritable-legende-azenor.html">La légende</a>
-    <a href="bibliographie.html">Bibliographie</a>
-    <a href="making-off.html">Making of</a>
-    <a href="contact.html">Contact</a>
-    <a href="en/index.html">🇬🇧</a>
-  </nav>
+  <div class="nav">
+    <nav class="menu">
+      <a href="lieux-du-roman.html">Lieux</a>
+      <a href="personnages.html">Personnages</a>
+      <a href="livre-des-conquetes.html">Conquêtes</a>
+      <a href="veritable-legende-azenor.html">La légende</a>
+      <a href="bibliographie.html">Bibliographie</a>
+      <a href="making-off.html">making of</a>
+      <a href="contact.html">Contact</a>
+    </nav>
+    <div class="lang">
+      <a href="en/index.html" title="English version">🇬🇧</a>
+    </div>
+  </div>
 </header>
 
 <main>
-  <section class="hero">
-    <img class="cover" src="images/accueil/couverture.jpg"
-         alt="Couverture du roman Le Testament d’Azénor">
+<section class="hero">
+  <div>
+    <img class="cover" src="images/accueil/couverture.jpg" alt="Couverture du roman Le Testament d’Azénor">
+  </div>
+  <div class="card">
+    <h1>Azénor – héroïne du roman <em>Le Testament d’Azénor</em></h1>
+    <div class="intro">
+De Brest à l’île d’Ouessant, des îles d’Aran aux rivages sauvages de Bréhat, ce roman plonge dans la fabuleuse légende d’Azénor et de son fils Budoc, entre histoire et mystère.
 
-    <div class="text">
-      <h1>Azénor – héroïne du roman <em>Le Testament d’Azénor</em></h1>
+Accusée d’adultère, la jeune princesse Azénor est condamnée à dériver sur l’océan. Son fils Budoc naît au cœur des îles d’Aran et grandit sous la protection de saint Enda, dans une école monastique où se forgent les grands esprits de son temps. Devenu moine à son tour, il ramènera en Armorique l’héritage de son maître et fondera sur l’île de Lavrec une école où s’épanouiront savoir et foi.
 
-      <p>De Brest à l’île d’Ouessant, des îles d’Aran aux rivages sauvages de Bréhat, ce roman plonge dans la fabuleuse légende d’Azénor et de son fils Budoc, entre histoire et mystère.</p>
+Mais au centre de cette fresque historique se trouve un manuscrit, rédigé par Tadhgán l’Irlandais, ancien druide devenu moine et précepteur d’Azénor. Un texte qui renferme une vérité capable de bouleverser les certitudes et d’attiser les convoitises. Trahisons, rivalités et luttes d’influence s’entrelacent autour de ces pages interdites, tandis que l’avenir de la Bretagne et de l’Irlande se dessine dans l’ombre des monastères et des prophéties.
 
-      <p>Accusée d’adultère, la jeune princesse Azénor est condamnée à dériver sur l’océan. Son fils Budoc naît au cœur des îles d’Aran et grandit sous la protection de saint Enda, dans une école monastique où se forgent les grands esprits de son temps. Devenu moine à son tour, il ramènera en Armorique l’héritage de son maître et fondera sur l’île de Lavrec une école où s’épanouiront savoir et foi.</p>
-
-      <p>Mais au centre de cette fresque historique se trouve un manuscrit, rédigé par Tadhgán l’Irlandais, ancien druide devenu moine et précepteur d’Azénor. Un texte qui renferme une vérité capable de bouleverser les certitudes et d’attiser les convoitises. Trahisons, rivalités et luttes d’influence s’entrelacent autour de ces pages interdites, tandis que l’avenir de la Bretagne et de l’Irlande se dessine dans l’ombre des monastères et des prophéties.</p>
-
-      <p>S’appuyant sur les Vies des Saints de Bretagne et d’Irlande, ce roman historique, aux allures de polar médiéval, mêle réalité et légende dans une épopée où le savoir peut être un héritage… ou une malédiction.</p>
+S’appuyant sur les Vies des Saints de Bretagne et d’Irlande, ce roman historique, aux allures de polar médiéval, mêle réalité et légende dans une épopée où le savoir peut être un héritage… ou une malédiction.
     </div>
-  </section>
+  </div>
+</section>
 </main>
 
-<footer>
-  <div>
-    <a href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/">LinkedIn</a>
-    <a href="https://twitter.com/intent/tweet?url=https://azenor.org/">X</a>
-    <a href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/">Facebook</a>
+<footer class="site-footer">
+  <div class="footer-inner">
+    <div class="social-icons">
+      <a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/" target="_blank" rel="noopener" title="LinkedIn">
+        <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/></svg>
+      </a>
+      <a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/" target="_blank" rel="noopener" title="X">
+        <svg viewBox="0 0 24 24"><path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/></svg>
+      </a>
+      <a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/" target="_blank" rel="noopener" title="Facebook">
+        <svg viewBox="0 0 24 24"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
+      </a>
+    </div>
+    <a class="buy-btn" href="achat.html">Acheter le livre</a>
   </div>
-  <a href="achat.html">Acheter le livre</a>
 </footer>
 
 </body>
