--- a/en/index.html
+++ b/en/index.html
@@ -5,7 +5,7 @@
 <meta name="viewport" content="width=device-width, initial-scale=1.0">
 
 <title>Azenor – heroine of the novel The Testament of Azenor</title>
-<meta name="description" content="Official site about Azenor, heroine of the historical novel The Testament of Azenor by Alain Bertrand.">
+<meta name="description" content="A 6th-century historical novel set between Ireland and Brittany, inspired by the legend of Azenor and her son Budoc.">
 <link rel="canonical" href="https://azenor.org/en/">
 <link rel="icon" href="/favicon.ico">
 
@@ -17,7 +17,6 @@
   --card: rgba(0,0,0,.52);
   --border: rgba(255,255,255,.12);
 }
-
 *{ box-sizing:border-box; }
 html, body{ height:100%; }
 
@@ -30,18 +29,15 @@ body{
     url("../images/accueil/fond-accueil.jpg") center / cover no-repeat fixed;
 }
 
-a{ color:inherit; text-decoration:none; }
-
 /* HEADER */
 header{
-  position:sticky;
-  top:0;
+  position:fixed;
+  top:0; left:0; right:0;
   z-index:1000;
   background:rgba(0,0,0,.65);
   backdrop-filter: blur(6px);
   border-bottom:1px solid rgba(255,255,255,.1);
 }
-
 .nav{
   max-width:1200px;
   margin:auto;
@@ -49,25 +45,30 @@ header{
   display:flex;
   align-items:center;
   gap:16px;
-  flex-wrap:wrap;
+  flex-wrap:nowrap;
+  width:100%;
 }
-
 .menu{
   flex:1;
   display:flex;
   gap:10px;
-  flex-wrap:wrap;
+  flex-wrap:nowrap;
+  overflow-x:auto;
+  -webkit-overflow-scrolling:touch;
+  white-space:nowrap;
+  min-width:0;
 }
-
 .menu a{
   color:var(--accent);
   padding:6px 10px;
   border-radius:999px;
   border:1px solid rgba(255,255,255,.15);
   background:rgba(0,0,0,.25);
+  flex:0 0 auto;
 }
-
-.lang{ display:flex; gap:8px; flex:0 0 auto; }
+.lang{
+  flex:0 0 auto;
+}
 .lang a{
   width:34px;
   height:24px;
@@ -79,24 +80,26 @@ header{
   background:rgba(0,0,0,.25);
 }
 
+/* reserve space for fixed header/footer */
+body{
+  padding-top:74px;
+  padding-bottom:110px;
+}
+
 /* MAIN */
 main{
   max-width:1200px;
   margin:auto;
   padding:36px 18px 44px;
 }
-
 .hero{
   display:grid;
   grid-template-columns:480px 1fr;
   gap:32px;
-  align-items:start;
 }
-
 @media(max-width:980px){
   .hero{ grid-template-columns:1fr; }
 }
-
 .cover{
   width:100%;
   max-width:480px;
@@ -104,7 +107,6 @@ main{
   margin:auto;
   box-shadow:0 16px 46px rgba(0,0,0,.60);
 }
-
 .card{
   background:var(--card);
   border:1px solid var(--border);
@@ -112,20 +114,17 @@ main{
   padding:18px;
   box-shadow:0 12px 30px rgba(0,0,0,.35);
 }
-
 h1{
   margin:0 0 10px;
   color:var(--accent);
   font-size: clamp(1.6rem, 2.2vw, 2.1rem);
 }
-
 .seo-subtitle{
-  margin:0 0 14px;
+  margin:0 0 16px;
   color:var(--muted);
   font-size:1.02rem;
   line-height:1.6;
 }
-
 .intro{
   line-height:1.75;
   color:var(--muted);
@@ -133,13 +132,14 @@ h1{
   white-space: pre-wrap;
 }
 
-/* FOOTER (desktop: bottom of page) */
+/* FOOTER fixed bottom */
 .site-footer{
+  position:fixed;
+  left:0; right:0; bottom:0;
   background:#000;
-  margin-top:4rem;
-  padding:1.6rem 0;
+  padding:1.4rem 0;
+  z-index:9999;
 }
-
 .footer-inner{
   max-width:1200px;
   margin:0 auto;
@@ -150,7 +150,6 @@ h1{
   gap:16px;
   flex-wrap:wrap;
 }
-
 .social-icons .icon{
   display:inline-flex;
   align-items:center;
@@ -161,9 +160,11 @@ h1{
   border:1px solid #f28c28;
   margin-right:0.5rem;
 }
-
-.social-icons svg{ width:16px; height:16px; fill:#f28c28; }
-
+.social-icons svg{
+  width:16px;
+  height:16px;
+  fill:#f28c28;
+}
 .buy-btn{
   background:linear-gradient(#3a3a3a, #1f1f1f);
   color:#f28c28;
@@ -172,46 +173,6 @@ h1{
   font-weight:500;
   border-radius:3px;
   box-shadow:0 2px 4px rgba(0,0,0,.6);
-}
-
-/* ===== iPHONE: header & footer FIXED + menu horizontal scroll ===== */
-@media (max-width:768px){
-  header{
-    position:fixed;
-    left:0; right:0; top:0;
-  }
-
-  /* Reserve space for fixed header/footer so the page can scroll normally */
-  body{
-    padding-top: 74px;
-    padding-bottom: 110px;
-  }
-
-  /* Menu horizontal scroll */
-  .nav{
-    flex-wrap:nowrap;
-    gap:10px;
-  }
-  .menu{
-    flex:1 1 auto;
-    flex-wrap:nowrap !important;
-    overflow-x:auto;
-    overflow-y:hidden;
-    -webkit-overflow-scrolling:touch;
-    white-space:nowrap;
-  }
-  .menu a{
-    flex:0 0 auto;
-    white-space:nowrap;
-  }
-
-  /* Footer fixed bottom */
-  .site-footer{
-    position:fixed;
-    left:0; right:0; bottom:0;
-    margin-top:0;
-    z-index:9999;
-  }
 }
 </style>
 </head>
@@ -229,53 +190,48 @@ h1{
       <a href="making-of.html">Making of</a>
       <a href="contact.html">Contact</a>
     </nav>
-    <div class="lang" aria-label="Language switch">
-      <a href="../index.html" title="Version française">🇫🇷</a>
+    <div class="lang">
+      <a href="../index.html" title="French version">🇫🇷</a>
     </div>
   </div>
 </header>
 
 <main>
-  <section class="hero">
-    <div>
-      <img class="cover" src="../images/accueil/couverture.jpg" alt="Cover of The Testament of Azenor">
-    </div>
+<section class="hero">
+  <div>
+    <img class="cover" src="../images/accueil/couverture.jpg" alt="Cover of The Testament of Azenor">
+  </div>
 
-    <div class="card">
-      <h1>Azenor – heroine of the novel <em>The Testament of Azenor</em></h1>
-      <p class="seo-subtitle">Azenor – heroine of the novel <em>The Testament of Azenor</em></p>
+  <div class="card">
+    <h1>Azenor – heroine of the novel <em>The Testament of Azenor</em></h1>
+    <p class="seo-subtitle">
+      A 6th-century historical novel set between Ireland and Brittany, blending legend, forbidden manuscript and monastic intrigue.
+    </p>
 
-      <div class="intro">From Brest to the island of Ushant, from the Aran Islands to the wild shores of Bréhat, this novel plunges into the fabulous legend of Azenor and her son Budoc, between history and mystery.
+    <div class="intro">From Brest to the island of Ushant, from the Aran Islands to the wild shores of Bréhat, this novel plunges into the fabulous legend of Azenor and her son Budoc, between history and mystery.
 
 Accused of adultery, the young princess Azenor is sentenced to drift on the ocean. Her son Budoc is born in the heart of the Aran Islands and grows up under the protection of Saint Enda, in a monastic school where the great minds of his time are formed. Becoming a monk in turn, he will bring back to Armorica the legacy of his master and found on the island of Lavrec a school where knowledge and faith will flourish.
 
 But at the heart of this historical fresco lies a manuscript, written by Tadhgán the Irishman, a former druid turned monk and Azenor’s tutor. A text that contains a truth capable of overturning certainties and stirring covetousness. Betrayals, rivalries and power struggles intertwine around these forbidden pages, while the future of Brittany and Ireland takes shape in the shadows of monasteries and prophecies.
 
 Drawing on the Lives of the Saints of Brittany and Ireland, this historical novel—with the feel of a medieval thriller—blends reality and legend into an epic in which knowledge can be a legacy… or a curse.</div>
-    </div>
-  </section>
+  </div>
+</section>
 </main>
 
 <footer class="site-footer">
   <div class="footer-inner">
     <div class="social-icons">
       <a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/en/" target="_blank" rel="noopener" title="LinkedIn">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
-        </svg>
+        <svg viewBox="0 0 24 24"><path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/></svg>
       </a>
       <a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/en/" target="_blank" rel="noopener" title="X">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
-        </svg>
+        <svg viewBox="0 0 24 24"><path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/></svg>
       </a>
       <a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/en/" target="_blank" rel="noopener" title="Facebook">
-        <svg viewBox="0 0 24 24" aria-hidden="true">
-          <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
-        </svg>
+        <svg viewBox="0 0 24 24"><path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/></svg>
       </a>
     </div>
-
     <a class="buy-btn" href="../achat.html">Buy the book</a>
   </div>
 </footer>
