--- a/maodez.html
+++ b/maodez.html
@@ -65,49 +65,58 @@
 </section>
 
 <section class="character-context">
+
 <h3>Maodez dans les traditions hagiographiques</h3>
-<p>La figure de Maodez nous est connue par deux <em>Vitae</em> médiévales...</p>
+<p>La figure de Maodez nous est connue par deux <em>Vitae</em> médiévales, rédigées aux XI<sup>e</sup> et XIV<sup>e</sup> siècles. Elles le présentent comme le dixième fils d’un roi irlandais, voué à Dieu avant sa naissance. Destiné au trône, il choisit pourtant la vie monastique, préférant le renoncement à la puissance.</p>
+
+<p>Selon ces récits, il quitte l’Irlande pour l’Armorique, s’installe dans une île alors réputée infestée de serpents — aujourd’hui identifiée à l’île Modez, près de Bréhat — et y fonde une communauté. L’épisode des serpents, fréquent dans l’hagiographie insulaire, symbolise la purification d’un territoire et la victoire spirituelle sur le désordre.</p>
+
+<p>Plusieurs historiens ont toutefois souligné que l’attribution d’origines irlandaises à de nombreux saints bretons pourrait relever, en partie, d’une construction hagiographique des XI<sup>e</sup> et XII<sup>e</sup> siècles. Dans un contexte de recomposition des identités ecclésiales, l’Irlande monastique constituait un modèle prestigieux. Revendiquer une filiation insulaire permettait d’inscrire une fondation bretonne dans une tradition spirituelle valorisée. Cette hypothèse a notamment été développée par André-Yves Bourgès, qui invite à distinguer mémoire spirituelle et réalité historique.</p>
 
 <h3>Un saint breton… et parisien</h3>
-<p>Le culte de saint Maodez dépasse cependant les rivages bretons...</p>
+<p>Le culte de saint Maodez dépasse cependant les rivages bretons. À la suite des invasions normandes, des reliques furent transportées vers l’est. Son nom se retrouve dans la région parisienne, notamment à Saint-Mandé, témoignant de l’extension du réseau monastique breton.</p>
 
 <h3>Maodez dans le roman</h3>
-<p>Dans <em>Le Testament d’Azénor</em>, Maodez n’est pas d’abord une figure miraculeuse...</p>
-</section>
+<p>Dans <em>Le Testament d’Azénor</em>, Maodez n’est pas d’abord une figure miraculeuse, mais un homme marqué par le renoncement. Fils de roi ayant volontairement abandonné l’héritage politique, il porte en lui la tension entre noblesse et ascèse. Sa présence rappelle que la conversion d’un territoire commence toujours par un choix intérieur.</p>
 
+</section>
 </main>
 
 <footer class="site-footer">
 <div class="footer-inner">
+
 <div class="footer-left">
 <button class="like-btn">❤</button>
 
 <div class="social-icons">
-
-<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" target="_blank" rel="noopener" title="LinkedIn">
-<svg viewBox="0 0 24 24">
-<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/>
+<!-- LinkedIn -->
+<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn">
+<svg aria-hidden="true" viewBox="0 0 24 24">
+<path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"></path>
 </svg>
 </a>
 
-<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" target="_blank" rel="noopener" title="X">
-<svg viewBox="0 0 24 24">
-<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/>
+<!-- X -->
+<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X">
+<svg aria-hidden="true" viewBox="0 0 24 24">
+<path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"></path>
 </svg>
 </a>
 
-<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" target="_blank" rel="noopener" title="Facebook">
-<svg viewBox="0 0 24 24">
-<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/>
+<!-- Facebook -->
+<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook">
+<svg aria-hidden="true" viewBox="0 0 24 24">
+<path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"></path>
 </svg>
 </a>
-
 </div>
+
 </div>
 
 <div class="footer-right">
 <a class="buy-btn" href="achat.html">Acheter le livre</a>
 </div>
+
 </div>
 </footer>
 
