--- a/maodez.html
+++ b/maodez.html
@@ -2,7 +2,7 @@
 <html lang="fr">
 <head>
 <meta charset="utf-8"/>
-<meta content="width=device-width, initial-scale=1.0" name="viewport"/>
+<meta name="viewport" content="width=device-width, initial-scale=1.0"/>
 
 <meta name="description" content="Maodez — Le Testament d’Azénor — page du site officiel du Testament d’Azénor : univers, personnages et ressources.">
 <link rel="canonical" href="https://azenor.org/maodez.html">
@@ -21,10 +21,75 @@
 <title>Maodez — Le Testament d’Azénor</title>
 
 <link href="https://fonts.googleapis.com" rel="preconnect"/>
-<link crossorigin href="https://fonts.gstatic.com" rel="preconnect"/>
+<link href="https://fonts.gstatic.com" rel="preconnect" crossorigin/>
 <link href="https://fonts.googleapis.com/css2?family=Libre+Baskerville:wght@400;700&family=Inter:wght@300;400;500&display=swap" rel="stylesheet"/>
 
 <link href="css/style.css?v=20260115" rel="stylesheet"/>
+
+<style>
+/* === FOOTER FORCÉ AUTONOME === */
+
+.site-footer{
+  background:#000;
+  margin-top:4rem;
+  padding:1.5rem 0;
+}
+
+.site-footer .footer-inner{
+  max-width:1200px;
+  margin:0 auto;
+  padding:0 1.5rem;
+  display:flex;
+  justify-content:space-between;
+  align-items:center;
+}
+
+.footer-left{
+  display:flex;
+  align-items:center;
+  gap:1rem;
+}
+
+.like-btn{
+  background:none;
+  border:1px solid #f28c28;
+  color:#f28c28;
+  padding:0.4rem 0.8rem;
+  cursor:pointer;
+}
+
+.social-icons{
+  display:flex;
+  gap:0.6rem;
+}
+
+.social-icons .icon{
+  display:flex;
+  align-items:center;
+  justify-content:center;
+  width:32px;
+  height:32px;
+  border-radius:50%;
+  border:1px solid #f28c28;
+}
+
+.social-icons svg{
+  width:16px;
+  height:16px;
+  fill:#f28c28;
+  display:block;
+}
+
+.footer-right .buy-btn{
+  background:linear-gradient(#3a3a3a, #1f1f1f);
+  color:#f28c28;
+  padding:0.55rem 1.2rem;
+  text-decoration:none;
+  font-weight:500;
+  border-radius:3px;
+}
+</style>
+
 </head>
 
 <body class="personnage">
@@ -49,29 +114,26 @@
 <main>
 
 <section class="character-grid">
-
 <div class="portrait">
 <img src="images/personnages/maodez.jpg" alt="Portrait de Maodez">
 </div>
 
 <div class="extrait excerpt">
 <h2 class="character-name">Maodez</h2>
-
 <p>Maodez était un homme de haute stature...</p>
 <p>Ses traits, bien dessinés...</p>
 </div>
-
 </section>
 
 <section class="character-context">
 <h3>Maodez dans les traditions hagiographiques</h3>
-<p>La figure de Maodez nous est connue...</p>
+<p>La figure de Maodez nous est connue par deux Vitae médiévales...</p>
 
 <h3>Un saint breton… et parisien</h3>
-<p>Le culte de saint Maodez dépasse...</p>
+<p>Le culte de saint Maodez dépasse cependant les rivages bretons...</p>
 
 <h3>Maodez dans le roman</h3>
-<p>Dans <em>Le Testament d’Azénor</em>, Maodez...</p>
+<p>Dans Le Testament d’Azénor, Maodez n’est pas d’abord une figure miraculeuse...</p>
 </section>
 
 </main>
@@ -83,26 +145,25 @@
 <button class="like-btn">❤</button>
 
 <div class="social-icons">
-
-<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" rel="noopener" target="_blank" title="LinkedIn">
-<svg aria-hidden="true" viewBox="0 0 24 24">
+<a class="icon" href="https://www.linkedin.com/sharing/share-offsite/?url=https://azenor.org/contact" target="_blank" rel="noopener">
+<svg viewBox="0 0 24 24">
 <path d="M4.98 3.5C4.98 4.88 3.87 6 2.5 6S0 4.88 0 3.5 1.11 1 2.5 1s2.48 1.12 2.48 2.5zM.5 8h4V24h-4V8zM8 8h3.8v2.2h.1c.5-1 1.8-2.2 3.8-2.2 4 0 4.7 2.6 4.7 6V24h-4v-7.8c0-1.9 0-4.2-2.6-4.2s-3 2-3 4v8H8V8z"/>
 </svg>
 </a>
 
-<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" rel="noopener" target="_blank" title="X">
-<svg aria-hidden="true" viewBox="0 0 24 24">
+<a class="icon" href="https://twitter.com/intent/tweet?url=https://azenor.org/contact" target="_blank" rel="noopener">
+<svg viewBox="0 0 24 24">
 <path d="M18.24 2H21l-6.6 7.55L22 22h-6.6l-4.7-6.1L5.4 22H2.6l7.1-8.1L2 2h6.7l4.3 5.6L18.24 2z"/>
 </svg>
 </a>
 
-<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" rel="noopener" target="_blank" title="Facebook">
-<svg aria-hidden="true" viewBox="0 0 24 24">
+<a class="icon" href="https://www.facebook.com/sharer/sharer.php?u=https://azenor.org/contact" target="_blank" rel="noopener">
+<svg viewBox="0 0 24 24">
 <path d="M22 12a10 10 0 1 0-11.6 9.9v-7H7.9v-2.9h2.5V9.8c0-2.5 1.5-3.9 3.8-3.9 1.1 0 2.2.2 2.2.2v2.4h-1.2c-1.2 0-1.6.8-1.6 1.5v1.8h2.8l-.4 2.9h-2.4v7A10 10 0 0 0 22 12z"/>
 </svg>
 </a>
-
 </div>
+
 </div>
 
 <div class="footer-right">
